# mimic_retargeter_lab

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE_THIRD_PARTY.md  README.md  pyproject.toml  requirements.txt
assets/: world.xml
assets/test_images/: outputs.pkl
config/: compute_metrics.yaml  offline_retargeting.yaml  online_retargeting.yaml  train_geort.yaml
config/dashboard/: dashboard.yaml
config/dataset/: manus.yaml  wilor.yaml
config/hand/: leap_hand.yaml  mimic_p050_hand.yaml  orca_v2_hand.yaml  shadow_dexee_hand.yaml  shadow_hand.yaml  wonik_allegro_hand.yaml  wuji_hand.yaml
config/hand_tracker/: manus_metagloves_pro.yaml  oakd_mediapipe.yaml
config/wrist_controller/: spacemouse.yaml
dataset/manus/: manus_right_subject-000_run-010.json  manus_right_subject-000_run-010.npz  manus_right_subject-001_run-010.json  manus_right_subject-001_run-010.npz
dataset/pinch_grasps/: pinch_grasps_test.pkl
dexworld/: __init__.py
dexworld.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dexworld/dashboard/: comparison_dashboard.py  dashboard.py
dexworld/data_sources/: __init__.py  base_hand_data_source.py  base_wrist_data_source.py
dexworld/hand_models/: __init__.py  base_hand.py  human_hand_base.py  leap_hand.py  mano_keypoint_hand.py  manus_hand.py  mimic_p050_hand.py  (+6 more)
docs/: geort.md  integrating_new_hand.md  jax_gpu_setup.md  regenerating_hand_previews.md  workspace_metric.md
mimic_retargeter_lab/: __init__.py
reports/: metrics-stats_manus_shadow_hand_ako.json  metrics-stats_manus_shadow_hand_dexpilot.json  metrics-stats_manus_shadow_hand_keyvector.json  metrics-stats_manus_wonik_allegro_hand_ako.json  metrics-stats_manus_wonik_allegro_hand_ako.pkl  metrics-stats_manus_wonik_allegro_hand_dexpilot.json  metrics-stats_manus_wonik_allegro_hand_dexpilot.pkl  metrics-stats_manus_wonik_allegro_hand_keyvector.json  metrics-stats_manus_wonik_allegro_hand_keyvector.pkl  metrics-stats_wilor_shadow_hand_keyvector.json  metrics-stats_wilor_wonik_allegro_hand_dexpilot.json  metrics-stats_wilor_wonik_allegro_hand_dexpilot.pkl
scripts/: calibrate_keyvector_scaling.py  check_mimic_keyvector_cfg.py  check_retargeter_devices.py  compare_fk_models.py  compute_all_pair_metrics.sh  compute_hand_retargeter_pair_metrics.py  debug_collisions.py  debug_pinch_settle.py  generate_robot_hand_golden_data.py  generate_robot_hand_webp.py  inspect_metrics_pkl.py  inspect_mjcf_kinematics.py  playback_manus_npz.py  precompute_workspace.py  profile_retargeter.py  record_manus_zmq.py  run_oakd_hand_tracker.py  run_offline_retargeting.py  run_online_retargeting.py  serve_all_pairs_dashboard.py  serve_single_pair_dashboard.py  show_fingertips.py  smoke_test_mjcf_geort.py  summarize_metrics.py  test_manus_zmq.py  test_spacemouse.py  viz_manus_nodes.py
tests/: conftest.py  test_mujoco_scenes.py
(+696 files in other folders)
