[project]
name = "mimic_retargeter_lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = {text = "CC-BY-NC-4.0"}
requires-python = ">=3.12,<3.13"
dependencies = [
    "geort",
    # Simulation / kinematics
    "mujoco>=3.0.0",
    "mujoco-mjx>=3.6.0",
    "jax>=0.4.34,<0.5",
    "jaxopt>=0.8.3",
    "torch>=2.4,<2.6",
    "numpy==1.26.4",
    "scipy>=1.10.0",
    # Config / CLI
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "tyro>=0.9.32",
    "pyyaml>=6.0.2",
    "tqdm>=4.64.0",
    # Data
    "zarr>=2.13.0",
    "pandas>=1.5.3",
    # Meshes / rendering / vision
    "trimesh>=3.15.0",
    "pyrender>=0.1.45",
    "open3d>=0.18.0",
    "opencv-python>=4.5.5",
    "opencv-contrib-python>=4.5.5",
    # Dashboard
    "dash>=2.0.0",
    "dash-bootstrap-components>=1.4.0",
    "dash-vtk>=0.0.9",
    "plotly>=5.0.0",
    "matplotlib>=3.7.0",
    # Hardware I/O (OAK-D camera, MANUS gloves, SpaceMouse)
    "depthai>=2.21.2.0",
    "pyzmq>=26.0.0",
    "pyspacemouse>=2.0.0",
]

[project.optional-dependencies]
gpu = [
    "jax[cuda12]>=0.4.28",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mimic_retargeter_lab*"]
exclude = ["assets*"]

[tool.uv.sources]
geort = { workspace = true }

[tool.uv.workspace]
members = ["third_party/geort"]

[tool.pytest.ini_options]
# Each entry below silences a known third-party warning that we can't fix
# at the source. Drop a filter the moment its underlying cause is resolved
# upstream so we don't mask new regressions.
#
# - "Mesh ... coplanar face": trimesh emits this for valid MJCF assets.
# - "JAXopt is no longer maintained": upstream deprecation. JAXopt still
#   works and powers the SLSQP path in keyvector/dexpilot/ako retargeters
#   (the new sampling_based retargeter doesn't use it). Track the migration
#   off jaxopt (likely to optimistix or a scipy wrapper) in a separate
#   issue; remove this filter when the dependency is dropped.
filterwarnings = [
    "ignore:Mesh .* has a coplanar face:UserWarning",
    "ignore:JAXopt is no longer maintained.*:DeprecationWarning",
]

[tool.ruff]
target-version = "py312"
force-exclude = true
extend-exclude = [
    "mimic_retargeter_lab/data_sources/hand_trackers/depthai_hand_tracker", # third-party
    "mimic_retargeter_lab/data_sources/hand_trackers/manus_hand_tracker",    # third-party
    "third_party",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"scripts/*" = ["E402"]


[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",  # `pytest -n auto`
    "ruff>=0.15.10",        # also run via pre-commit, which pins its own copy
]
